feat: change id type and rename name field in deployment